src/python/pcp.py

#
# Copyright (C) 2012 Red Hat Inc.
# Copyright (C) 2009-2012 Michael T. Werner
#
# This file is part of the "pcp" module, the python interfaces for the
# Performance Co-Pilot toolkit.
#
# This program is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation; either version 2 of the License, or (at your
# option) any later version.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
# for more details.
#

"""Wrapper module for libpcp - Performace Co-Pilot client API, aka PMAPI

Additional Information:

Performance Co-Pilot Web Site
http://oss.sgi.com/projects/pcp

Performance Co-Pilot Programmer's Guide
SGI Document 007-3434-005
http://techpubs.sgi.com
cf. Chapter 3. PMAPI - The Performance Metrics API

EXAMPLE

import pmapi
from pcp import *

# Create a pcp class
pm = pmContext(pmapi.PM_CONTEXT_HOST,"localhost")

# Get ids for number cpus and load metrics
(code, metric_ids) = pm.pmLookupName(("hinv.ncpu","kernel.all.load"))
# Get the description of the metrics
(code, descs) = pm.pmLookupDesc(metric_ids)
# Fetch the current value for number cpus
(code, results) = pm.pmFetch(metric_ids)
# Extract the value into a scalar value
(code, atom) = pm.pmExtractValue(results.contents.get_valfmt(0),
                                 results.contents.get_vlist(0, 0),
                                 descs[0].contents.type,
                                 pmapi.PM_TYPE_U32)
print "#cpus=",atom.ul

# Get the instance ids for kernel.all.load
inst1 = pm.pmLookupInDom(descs[1], "1 minute")
inst5 = pm.pmLookupInDom(descs[1], "5 minute")

# Loop through the metric ids
for i in xrange(results.contents.numpmid):
    # Is this the kernel.all.load id?
    if (results.contents.get_pmid(i) != metric_ids[1]):
        continue
    # Extrace the kernal.all.load instance
    for j in xrange(results.contents.get_numval(i) - 1):
        (code, atom) = pm.pmExtractValue(results.contents.get_valfmt(i),
                                         results.contents.get_vlist(i, j),
                                         descs[i].contents.type, pmapi.PM_TYPE_FLOAT)
        value = atom.f
        if results.contents.get_inst(i, j) == inst1:
            print "load average 1=",atom.f
        elif results.contents.get_inst(i, j) == inst5:
            print "load average 5=",atom.f
"""


##############################################################################
#
# imports
#

# for dereferencing timestamp in pmResult structure
import datetime

# for interfacing with libpcp - the client-side C API
import ctypes
from ctypes import *

# needed for find_library() - to load libpcp
from ctypes.util import *

# needed for environment manipulation
import os

# constants adapted from C header file <pcp/pmapi.h>
import pmapi
from pmapi import *

import time

##############################################################################
#
# configuration tools
#

# Return a dict form of the key=value fields from pcp.conf
def pcp_conf():
    import shlex, string
    if ('PCP_DIR' in os.environ):
        file=os.environ['PCP_DIR']+'/etc/pcp.conf'
    else:
        file='/etc/pcp.conf'
    D={}
    for line in open(file):
        try:
            l = shlex.split(line, True)
            if (len(l) == 0): # comments
                continue
            (key,value) = string.split(l[0],'=')
            D[key]=value
            continue
        except ValueError:
            continue
    # XXX: cache D?
    return D

##############################################################################
#
# dynamic library loads
#

# helper func for platform independent loading of shared libraries
def loadLib( lib ):
    # Just in case this platform uses gcc to resolve ctypes libraries,
    # and those libraries are in some non-system directory, then
    # $LIBRARY_PATH is helpful to set.
    pc = pcp_conf()
    # XXX: don't append same path multiple times
    if ('PCP_LIB_DIR' in pc):
        try:
            os.environ['LIBRARY_PATH'] += ':' + pc['PCP_LIB_DIR']
        except KeyError:
            os.environ['LIBRARY_PATH'] = pc['PCP_LIB_DIR']

    name = find_library( lib )
    try:
        handle = WinDLL( name )
    except NameError:
        pass
    handle = CDLL( name )
    return handle

# Performance Co-Pilot PMAPI library (and friends)
libpcp = loadLib( "pcp" )
libpcp_gui = loadLib( "pcp_gui" )
libpcp_import = loadLib( "pcp_import" )

# libc is needed for calling free() 
libc = loadLib( "c" )


##############################################################################
#
# definition of exception classes
#

class pmErr( Exception ):

    def __str__( self ):
        errNum = self.args[0]
        try:
            errSym = pmErrSymD[ errNum ]
            errStr = ctypes.create_string_buffer(PM_MAXERRMSGLEN)
            errStr = libpcp.pmErrStr_r( errNum, errStr, PM_MAXERRMSGLEN )
        except KeyError:
            errSym = errStr = ""

        if self.args[0] == PM_ERR_NAME:
            pmidA = self.args[1]
            badL = self.args[2]
            return "%s %s: %s" % (errSym, errStr, badL)
        else:
            return "%s %s" % (errSym, errStr)

class pmiErr( Exception ):

    def __str__( self ):
        errNum = self.args[0]
        try:
            errSym = pmiErrSymD[ errNum ]
            errStr = ctypes.create_string_buffer(PMI_MAXERRMSGLEN)
            errStr = libpcp_import.pmiErrStr_r( errNum, errStr, PMI_MAXERRMSGLEN )
        except KeyError:
            errSym = errStr = ""
        return "%s %s" % (errSym, errStr)


##############################################################################
#
# definition of structures used by C library libpcp, derived from <pcp/pmapi.h>
#
# This section defines the data structures for accessing and manuiplating
# metric information and values. Detailled information about these data
# structures can be found in:
#
# SGI Document: 007-3434-005
# Performance Co-Pilot Programmer's Guide
# Section 3.4 - Performance Metric Descriptions, pp. 59
# Section 3.5 - Performance Metric Values, pp. 62
#

# this hardcoded decl should be derived from <sys/time.h>
class timeval(Structure):
    _fields_ = [ ("tv_sec", c_long),
                 ("tv_usec", c_long) ]

    def __str__(self):
        tmp = datetime.date.fromtimestamp( self.tv_sec )
        return "%s.%06d" % (tmp, self.tv_usec)

class pmAtomValue(Union):
    """Union used for unpacking metric values according to type

    Constants for specifying metric types are defined in module pmapi
    """
    _fields_ = [ ("l", c_int),
                 ("ul", c_uint),
                 ("ll", c_longlong),
                 ("ull", c_ulonglong),
                 ("f", c_float),
                 ("d", c_double),
                 ("cp", c_char_p),
                 ("vp", c_void_p) ]

    _atomDrefD = { PM_TYPE_32 : lambda x: x.l,
                  PM_TYPE_U32 : lambda x: x.ul,
                  PM_TYPE_64 : lambda x: x.ll,
                  PM_TYPE_U64 : lambda x: x.ull,
                  PM_TYPE_FLOAT : lambda x: x.f,
                  PM_TYPE_DOUBLE : lambda x: x.d,
                  PM_TYPE_STRING : lambda x: x.cp,
                  PM_TYPE_AGGREGATE : lambda x: None,
                  PM_TYPE_AGGREGATE_STATIC : lambda x: None,
                  PM_TYPE_NOSUPPORT : lambda x: None,
                  PM_TYPE_UNKNOWN : lambda x: None
            }


    def dref( self, type ):
        return self._atomDrefD[type]( self )   

class pmUnits(Structure):
    if HAVE_BITFIELDS_LTOR:
        """Irix bitfields specifying scale and dimension of metric values

        Constants for specifying metric units are defined in module pmapi
        """
        _fields_ = [ ("dimSpace", c_int, 4),
                     ("dimTime", c_int, 4),
                     ("dimCount", c_int, 4),
                     ("scaleSpace", c_int, 4),
                     ("scaleTime", c_int, 4),
                     ("scaleCount", c_int, 4),
                     ("pad", c_int, 8) ]
    else:
        """Linux bitfields specifying scale and dimension of metric values

        Constants for specifying metric units are defined in module pmapi
        """
        _fields_ = [ ("pad", c_int, 8),
                     ("scaleCount", c_int, 4),
                     ("scaleTime", c_int, 4),
                     ("scaleSpace", c_int, 4),
                     ("dimCount", c_int, 4),
                     ("dimTime", c_int, 4),
                     ("dimSpace", c_int, 4) ]

    def __str__( self ):
        return libpcp.pmUnitsStr( self )


class pmValueBlock(Structure):
    if HAVE_BITFIELDS_LTOR:
        """Value block bitfields for Irix systems

        A value block holds the value of an instance of a metric
        pointed to by the pmValue structure, when that value is
        too large (> 32 bits) to fit in the pmValue structure
        """
        _fields_ = [ ("vtype", c_uint, 8),
                     ("vlen", c_uint, 24),
                     ("vbuf", c_char * 1) ]
    else:
        """Value block bitfields for Linux systems

        A value block holds the value of an instance of a metric
        pointed to by the pmValue structure, when that value is
        too large (> 32 bits) to fit in the pmValue structure
        """
        _fields_ = [ ("vlen", c_uint, 24),
                     ("vtype", c_uint, 8),
                     ("vbuf", c_char * 1) ]

class valueDref(Union):
    """Union in pmValue for dereferencing the value of an instance of a metric

    For small items, e.g. a 32-bit number, the union contains the actual value
    For large items, e.g. a text string, the union points to a pmValueBlock
    """
    _fields_ = [ ("pval", POINTER(pmValueBlock)),
                 ("lval", c_int) ]
    def __str__(self):
        return "value=%#lx" % (self.lval)

class pmValue(Structure):
    """Structure holding the value of a metric instance
    """
    _fields_ = [ ("inst", c_int),
                  ("value", valueDref) ]
    def __str__(self):
        return "pmValue@%#lx inst=%d " % (addressof(self), self.inst) + str(self.value)
                   
class pmValueSet(Structure):
    """Structure holding a metric's list of instance values

    A performance metric may contain one or more instance values, one for each
    item that the metric concerns. For example, a metric measuring filesystem
    free space would contain one instance value for each filesystem that exists
    on the target machine. Whereas, a metric measuring free memory would have
    only one instance value, representing the total amount of free memory on
    the target system.
    """
    _fields_ = [ ("pmid", c_uint),
                 ("numval", c_int),
                 ("valfmt", c_int),
                 ("vlist", (pmValue * 1)) ]
    def __str__(self):
	if self.valfmt == 0:
	    return "pmValueSet@%#lx id=%#lx numval=%d valfmt=%d" % (addressof(self), self.pmid, self.numval, self.valfmt) + (str([" %s" % str(self.vlist[i]) for i in xrange(self.numval)]))
	else:
	    return ""
                   
    def vlist_read( self ):
        return pointer( self._vlist[0] )

    vlist = property( vlist_read, None, None, None )

pmValueSetPtr = POINTER(pmValueSet)
pmValueSetPtr.pmid   = property( lambda x: x.contents.pmid,   None, None, None )
pmValueSetPtr.numval = property( lambda x: x.contents.numval, None, None, None )
pmValueSetPtr.valfmt = property( lambda x: x.contents.valfmt, None, None, None )
pmValueSetPtr.vlist  = property( lambda x: x.contents.vlist,  None, None, None )

class pmResult(Structure):
    """Structure returned by pmFetch, with a value set for each metric queried
